--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head><meta charset="UTF-8"><title>WorldLOLmomentsBot</title></head>
+  <body>
+    <h1>WorldLOLmomentsBot</h1>
+    <p>Página verificada para TikTok OAuth y subida de vídeo.</p>
+  </body>
+</html>
 
