--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - WorldLOLmoments</title>
+<meta charset="UTF-8">
+<title>Terms of Service</title>
 </head>
 <body>
-    <h1>Terms of Service</h1>
-    <p>This website provides static documentation pages required for TikTok developer verification. It does not offer interactive features or collect any user data. By using this site, you acknowledge that it serves only as an informational and authorization endpoint.</p>
-    <p>If you have any questions, please contact: proyectosmanmaul@gmail.com</p>
+<h1>Terms of Service — WorldLOLmomentsBot</h1>
+<p>Este sitio y su contenido se utilizan exclusivamente con fines de demostración técnica.</p>
+<p>No se ofrece ningún servicio al público general y no se permite el registro de usuarios.</p>
+<p>El propietario del proyecto utiliza este entorno para integrar y probar funciones de la API de TikTok en modo Sandbox.</p>
+<p>El uso de la aplicación está limitado únicamente al propietario autorizado.</p>
 </body>
 </html>
